--- a/index.html
+++ b/index.html
@@ -51,10 +51,8 @@
                     <img class="sliderImg" src="" alt="11">
                 </div>
             </div>
-            <div class="btns">
-                <button class="btn js-left">влево</button>
-                <button class="btn js-right">вправо</button>
-            </div>
+            <button class="btn btn--left js-left">&#8826;</button>
+            <button class="btn btn--right js-right">&#8827;</button>
         </div>
     </div>
 </body>
