--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             <div class="sliderCount">
                 <span class="current">0</span> / <span class="total">0</span>
             </div>
-            <div class="sliderContainer" style="--num: 1;">
+            <div class="sliderContainer">
+                <div class="sliderItem">
+                    <img class="sliderImg" src="" alt="1">
+                </div>
                 <div class="sliderItem">
                     <img class="sliderImg" src="" alt="1">
                 </div>
