--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
         <div class="sliderWrap">
             <div class="sliderCount">
-                <span class="current"></span> / <span class="total"></span>
+                <span class="current"></span>
+                /
+                <span class="total"></span>
             </div>
             <div class="sliderContainer">
                 <div class="sliderItem">
